intro section and (almost) finalize cubic fourfolds

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -448,3 +448,73 @@ shorthand = {Don17},
 	keywords = {14F05, 18E30 (Primary) 14M15 (Secondary), Mathematics - Algebraic Geometry, Mathematics - Representation Theory},
 	pages = {942--978},
 }
+
+
+@article{bondal_reconstruction_2001,
+    shorthand = {BonOrl97},
+	title = {Reconstruction of a variety from the derived category and groups of autoequivalences},
+	volume = {125},
+	issn = {0010437X},
+	url = {http://arxiv.org/abs/alg-geom/9712029},
+	doi = {10.1023/A:1002470302976},
+	abstract = {We consider smooth algebraic varieties with ample either canonical or anticanonical sheaf. We prove that such a variety is uniquely determined by its derived category of coherent sheaves. We also calculate the group of exact autoequivalences for these categories. The technics of ample sequences in abelian categories is used.},
+	number = {3},
+	urldate = {2024-04-22},
+	journal = {Compositio Mathematica},
+	author = {Bondal, A. and Orlov, D.},
+	year = {2001},
+	note = {arXiv:alg-geom/9712029},
+	keywords = {Mathematics - Algebraic Geometry},
+	pages = {327--344},
+}
+
+@article{orlov_derived_2003,
+    shorthand = {Orl09},
+	title = {Derived categories of coherent sheaves and equivalences between them},
+	volume = {58},
+	issn = {0036-0279, 1468-4829},
+	url = {https://iopscience.iop.org/article/10.1070/RM2003v058n03ABEH000629},
+	doi = {10.1070/RM2003v058n03ABEH000629},
+	number = {3},
+	urldate = {2024-04-22},
+	journal = {Russian Mathematical Surveys},
+	author = {Orlov, D O},
+	month = jun,
+	year = {2003},
+	pages = {511--591},
+}
+
+
+@misc{kontsevich_homological_1994,
+    shorthand = {Kon94},
+	title = {Homological {Algebra} of {Mirror} {Symmetry}},
+	url = {http://arxiv.org/abs/alg-geom/9411018},
+	doi = {10.48550/arXiv.alg-geom/9411018},
+	abstract = {This is my talk at ICM, Zurich 1994. It contains a short introduction, two basic examples and a refined version of the Mirror Conjecture formulated in terms of homological algebra.},
+	urldate = {2024-04-22},
+	publisher = {arXiv},
+	author = {Kontsevich, Maxim},
+	month = nov,
+	year = {1994},
+	note = {arXiv:alg-geom/9411018},
+	keywords = {Mathematics - Algebraic Geometry, High Energy Physics - Theory},
+}
+
+@article{kontsevich_deformation_2003,
+    shorthand = {Kon97},
+	title = {Deformation {Quantization} of {Poisson} {Manifolds}},
+	volume = {66},
+	issn = {0377-9017},
+	url = {http://link.springer.com/10.1023/B:MATH.0000027508.00421.bf},
+	doi = {10.1023/B:MATH.0000027508.00421.bf},
+	language = {en},
+	number = {3},
+	urldate = {2024-04-22},
+	journal = {Letters in Mathematical Physics},
+	author = {Kontsevich, Maxim},
+	month = dec,
+	year = {2003},
+	pages = {157--216},
+}
+
+
