--- a/introduction.tex
+++ b/introduction.tex
@@ -2,13 +2,13 @@ In this project, we review the theory of derived categories of coherent sheaves 
 
 The derived category has its origins in the 60s, when Jean-Louis Verdier (a student of Grothendieck) invented them and generalized the classical Serre duality to what is now called \emph{Grothendieck-Verdier duality}. This is a very powerful duality which provides the derived pushforward functor $f_*$ with both a left adjoint $f^*$ and a right adjoint $f_!$. 
 
-Later on, in 1979, Beilinson produced what is called an exceptional collection for the derived category of $\P^n$, namely $\calD(\P^n)=\langle O, O(1),\dots, O(n)\rangle$. Informally, this says that every coherent sheaf can be written as a generalized linear combination of some 'point-like' objects, by iteratively using sums and cones. In some sense, the theory of derived categories of coherent sheaves is a sophisticated version of linear algebra, which explains the title of Beilinson's paper \cite{Beilinson1978}: one can produce semiorthogonal decompositions (the 'semi' comes from the fact that the orthogonality relations are no longer symmetric), which split the derived category into simpler pieces. We give the proof of Beilinson in the foundational chapter, which boils down to resolving the diagonal, and also generalize it to projective bundles and the blowup formula of Bondal-Orlov. All of these can be thought of as a categorification of the usual projective bundle formula and blowup formula in cohomology.
+Later on, in 1979, Beilinson produced what is called an exceptional collection for the derived category of $\P^n$, namely $\calD(\P^n)=\langle O, O(1),\dots, O(n)\rangle$. Informally, this says that every coherent sheaf can be written as a generalized linear combination of some `point-like' objects, by iteratively using sums and cones. In some sense, the theory of derived categories of coherent sheaves is a sophisticated version of linear algebra, which explains the title of Beilinson's paper \cite{Beilinson1978}: one can produce semiorthogonal decompositions (the `semi' comes from the fact that the orthogonality relations are no longer symmetric), which split the derived category into simpler pieces. We give the proof of Beilinson in the foundational chapter, which boils down to resolving the diagonal, and also generalize it to projective bundles and the blowup formula of Bondal-Orlov. All of these can be thought of as a categorification of the usual projective bundle formula and blowup formula in cohomology.
 
 A few years later in 1981, Mukai proved the equivalence of the derived categories of an abelian variety $A$ and its dual $\hat{A}$, by using what is now-called a \emph{Fourier-Mukai transform.} A classical example of such a transform is the universal Poincare bundle on $E\times \mathrm{Pic}^0(E)$, which parametrizes all degree $0$ line bundles on an elliptic curve $E$. The analogy with Fourier transforms is that objects on the product serve as a sort of kernel: given $\calE\in \calD(X\times Y)$, one can take any $\calF \in \calD(X)$, pull it up to $X\times Y$, multiply it with the kernel $\calE$ and then push down, i.e. integrate. The result is denoted $\Phi_\calE (\calF)\in \calD(Y)$. Moreover, Grothendieck-Verdier duality allows one to find left and right adjoints of this operation.
 
 In the 90s came the the foundational papers by Bondal-Orlov \cite{bondal_semiorthogonal_1995}, \cite{bondal_reconstruction_2001}, who proved all sorts of theorems about derived categories (too many to even mention). They proved, for example, that every fully faithful functor between derived categories admitting an adjoint is induced by a Fourier-Mukai kernel. Moreover, they showed that every Fano or anti-Fano variety can be reconstructed from its derived category. This cemented the importance of derived categories to algebraic geometry.
 
-In 1994, a different viewpoint arose, connecting theoretical physics to derived categories. In his ICM address \cite{kontsevich_homological_1994}, Kontsevich proposed that mirror varieties coming from two models of string theory (the A-model and B-model) have rich categorical structures, which are moreover equivalent - on the A-side, there is what is called the Fukaya category, and on the B-side there is the derived category of coherent sheaves. Kontsevich conjectured that $\calD(X)\simeq \calD \mathrm{Fuk}(\hat{X})$ whenever $X$ and $\hat{X}$ are mirror to each other. This viewpoint created a fruitful dialogue between symplectic and algebraic geometry, and it has served as a dictionary connecting physics and geometry ever since.
+In 1994, a different viewpoint arose, connecting theoretical physics to derived categories. In his ICM address \cite{kontsevich_homological_1994}, Kontsevich proposed that mirror varieties coming from two models of string theory (the A-model and B-model) have rich categorical structures, which are moreover equivalent---on the A-side, there is what is called the Fukaya category, and on the B-side there is the derived category of coherent sheaves. Kontsevich conjectured that $\calD(X)\simeq \calD \mathrm{Fuk}(\hat{X})$ whenever $X$ and $\hat{X}$ are mirror to each other. This viewpoint created a fruitful dialogue between symplectic and algebraic geometry, and it has served as a dictionary connecting physics and geometry ever since.
 
 The mirror symmetry conjecture gave a strong motivation to understand exactly when derived equivalences of varieties arose. In particular, if bariational equivalence was related to derived equivalence. In 2000, Bridgeland proved that any two crepant resolutions of a terminal threefold would be derived equivalent. This result was especially significant, as it showed that birational Calabi Yau threefolds (which are related by a chain of flops) are derived equivalent. This was one of the results which inspired Kawamata to formulate the DK hypothesis, which conjectures that for $X$ and $Y$ birationally equivalent smooth projective varieties, their derived categories of coherent sheaves are equivalent if and only if there exists a smooth projective variety $Z$ with birational morphisms $f: Z \to X$ and $g: Z\to Y$ such that the pullbacks $f^{*}K_{X}\sim g^{*}K_{Y}$ are linear equivalent. This hypothesis has led the establishment of formulas which can express a derived category in terms of the variety's birational geometry, in particular, a decomposition of a derived cartegory which encodes the steps of the minimal model program.  
 
